# redscan

./: .gitignore  DESARROLLO.md  PLAN.md  README.md  angular.json  electron-builder.yml  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json
electron/: main.ts  preload.ts
electron/ipc/: discovery.ipc.ts  events.ipc.ts  history.ipc.ts  index.ts  latency.ipc.ts  scanner.ipc.ts  settings.ipc.ts
electron/services/: database.ts  events.ts  logger.ts  python-manager.ts
electron/services/repositories/: base.repository.ts  device.repository.ts  event.repository.ts  index.ts  latency.repository.ts  network.repository.ts  port-scan.repository.ts  settings.repository.ts  (+2 more)
electron/utils/: http.ts  paths.ts
engine/: Dockerfile  netsentinel-engine.spec  pyproject.toml  requirements.txt
engine/app/: main.py
engine/app/api/: deps.py
engine/app/api/v1/: discovery.py  latency.py  port_scan.py  router.py  system.py  vulnerability.py
engine/app/core/: auth.py  config.py  exceptions.py  logger.py
engine/app/models/: discovery.py  latency.py  port_scan.py  system.py  vulnerability.py
engine/app/services/: discovery.py  latency.py  port_scanner.py  vulnerability.py
engine/app/utils/: arp.py  nmap_wrapper.py  oui.py
engine/scripts/: generate_oui.py
engine/tests/: conftest.py  test_discovery.py  test_latency.py  test_oui.py  test_port_scan.py  test_port_scanner_service.py  test_vulnerability.py  test_vulnerability_service.py
scripts/: build-all.ps1  dev-setup.ps1
src/: index.html
src/app/: app.config.ts  app.routes.ts
src/styles/: styles.scss
(+21 files in other folders)
