[project]
name = "netsentinel-engine"
version = "0.1.0"
description = "Network engine for NetSentinel - FastAPI + scapy + python-nmap"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "scapy>=2.6.0",
    "python-nmap>=0.7.0",
    "pydantic>=2.0.0",
    "websockets>=14.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
